# VecViz

./: .gitignore  CMakeLists.txt  CalcInterpreter.cpp  CalcInterpreter.h  Drawing.cpp  Drawing.h  FontManager.cpp  FontManager.h  Settings.cpp  Settings.h  Singleton.h  build.sh  main.cpp  utils.cpp  utils.h
Fonts/: FreeSerif.glyphs  NotoSans.glyphs
UI/: CalcWindow.cpp  MenuBar.cpp  OptionsWindow.cpp  SubWindows.h  TransformationWindow.cpp  TransformationWindow.h  UIWindow.cpp  UIWindow.h  VectorSpaceWindow.cpp  VectorSpaceWindow.h  VectorsWindow.cpp  VectorsWindow.h
VectorSpaces/: DrawVector.cpp  DrawVector.h  VectorSpace.cpp  VectorSpace.h  VectorSpace1D.cpp  VectorSpace1D.h  VectorSpace2D.cpp  VectorSpace2D.h
